3.3.4 1.21.7 & 1.21.8 support Handle NPC visibility async Drop support for 1.20.1, 1.20.2, 1.20.4 & 1.21.4 (in favor of 1.21.8) Reviewed-by: aematsubara <correo.agustinmatsubara@gmail.com>